@@ -1,3 +1,8 @@
+2010-05-06  Marek Habersack  <mhabersack@novell.com>
+
+	* RouteCollection.cs: GetVirtualPath throws ArgumentException
+	when named route is not found in the collection.
+
 2010-05-05  Marek Habersack  <mhabersack@novell.com>
 
 	* UrlRoutingModule.cs: PostMapRequestHandler is obsolete in 4.0
